--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3,6 +3,8 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Oxygen:400,300,700);
 
 
 
@@ -81,7 +83,7 @@ h6,
   font-family: 'Lora', serif;
 }
 .bg-primary {
-  background-color: #00a885 !important;
+  background-color: #52d5be !important;
 }
 .bg-success {
   background-color: #001730 !important;
@@ -96,8 +98,8 @@ h6,
   background-color: #f28281 !important;
 }
 .btn-primary {
-  background-color: #00a885;
-  border-color: #00a885;
+  background-color: #52d5be;
+  border-color: #52d5be;
   color: #ffffff;
 }
 .btn-primary:hover,
@@ -106,14 +108,14 @@ h6,
 .btn-primary:active,
 .btn-primary.active {
   color: #ffffff;
-  background-color: #005c48;
-  border-color: #005c48;
+  background-color: #2bb098;
+  border-color: #2bb098;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #005c48 !important;
-  border-color: #005c48 !important;
+  background-color: #2bb098 !important;
+  border-color: #2bb098 !important;
 }
 .btn-secondary {
   background-color: #bfcecb;
@@ -217,8 +219,8 @@ h6,
 }
 .btn-primary-outline {
   background: none;
-  border-color: #004234;
-  color: #004234;
+  border-color: #269b87;
+  color: #269b87;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
@@ -226,14 +228,14 @@ h6,
 .btn-primary-outline:active,
 .btn-primary-outline.active {
   color: #ffffff;
-  background-color: #00a885;
-  border-color: #00a885;
+  background-color: #52d5be;
+  border-color: #52d5be;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #00a885 !important;
-  border-color: #00a885 !important;
+  background-color: #52d5be !important;
+  border-color: #52d5be !important;
 }
 .btn-secondary-outline {
   background: none;
@@ -336,7 +338,7 @@ h6,
   border-color: #f28281 !important;
 }
 .text-primary {
-  color: #00a885 !important;
+  color: #52d5be !important;
 }
 .text-success {
   color: #001730 !important;
@@ -363,36 +365,36 @@ h6,
   background-color: #f28281;
 }
 .btn-social {
-  border-color: #00a885;
+  border-color: #52d5be;
 }
 .btn-social:hover {
-  background: #00a885;
+  background: #52d5be;
 }
 .mbr-company .list-group-item.active .list-group-text {
-  color: #00a885;
+  color: #52d5be;
 }
 .mbr-footer p a,
 .mbr-footer ul a {
-  color: #00a885;
+  color: #52d5be;
 }
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #00a885;
+  background: #52d5be;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #00a885;
+  color: #52d5be;
 }
 .lead a,
 .lead a:hover {
-  color: #00a885;
+  color: #52d5be;
 }
 .lead blockquote {
-  border-color: #00a885;
+  border-color: #52d5be;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #28ffd2;
+  color: #f6fdfc;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -412,7 +414,7 @@ h6,
 }
 .mbr-small-footer a,
 .mbr-gallery-filter li:hover {
-  color: #00a885;
+  color: #52d5be;
 }
 .scrollToTop_wraper {
   opacity: 0 !important;
@@ -452,7 +454,7 @@ h6,
 #ext_menu-1 .dropdown-item:hover,
 #ext_menu-1 .link:focus,
 #ext_menu-1 .dropdown-item:focus {
-  color: #00a885;
+  color: #52d5be;
 }
 #ext_menu-1 .link[aria-expanded="true"],
 #ext_menu-1 .dropdown-menu {
@@ -479,11 +481,11 @@ h6,
 }
 #ext_menu-1 .bg-color.transparent.opened .link:hover,
 #ext_menu-1 .bg-color.transparent.opened .link:focus {
-  color: #00a885;
+  color: #52d5be;
 }
 #ext_menu-1 .link[aria-expanded="true"],
 #ext_menu-1 .dropdown-item[aria-expanded="true"] {
-  color: #00a885!important;
+  color: #52d5be!important;
 }
 #testimonials1-2 .mbr-section-title {
   font-family: 'Open Sans', sans-serif;
@@ -529,7 +531,7 @@ h6,
   font-family: 'Lato', sans-serif;
 }
 #footer1-a P {
-  color: #00a885;
+  color: #28ffd2;
 }
 
 
@@ -553,6 +555,7 @@ h6,
 }
 #content5-g .mbr-section-title SPAN {
   font-family: 'Open Sans', sans-serif;
+  color: #003166;
 }
 #header3-m .mbr-section-title,
 #header3-m .mbr-section-subtitle {
@@ -560,7 +563,7 @@ h6,
 }
 #header3-m H3 {
   font-size: 32px;
-  color: #001730;
+  color: #003166;
   font-family: 'Open Sans', sans-serif;
 }
 #features7-k .card-subtitle {
@@ -587,23 +590,30 @@ h6,
 #msg-box1-n H2 {
   text-align: right;
 }
+#msg-box1-n SPAN {
+  color: #28ffd2;
+}
 #content5-o .mbr-section-title,
 #content5-o p {
   color: #fff;
 }
 #msg-box5-p H3 {
   font-size: 36px;
-  color: #232323;
+  color: #003166;
 }
 #msg-box5-p P {
-  color: #00a885;
+  color: #28ffd2;
 }
 #form1-q .form-control-label {
   color: #232323;
 }
 #form1-q .mbr-section-title {
   font-size: 36px;
-  color: #28324e;
+  color: #003166;
+}
+#social-buttons4-1a .mbr-section-title,
+#social-buttons4-1a .btn-social {
+  color: #fff;
 }
 #ext_menu-c .hide-buttons .nav-btn {
   display: none !important;
@@ -633,7 +643,7 @@ h6,
 #ext_menu-c .dropdown-item:hover,
 #ext_menu-c .link:focus,
 #ext_menu-c .dropdown-item:focus {
-  color: #00a885;
+  color: #52d5be;
 }
 #ext_menu-c .link[aria-expanded="true"],
 #ext_menu-c .dropdown-menu {
@@ -660,11 +670,11 @@ h6,
 }
 #ext_menu-c .bg-color.transparent.opened .link:hover,
 #ext_menu-c .bg-color.transparent.opened .link:focus {
-  color: #00a885;
+  color: #52d5be;
 }
 #ext_menu-c .link[aria-expanded="true"],
 #ext_menu-c .dropdown-item[aria-expanded="true"] {
-  color: #00a885!important;
+  color: #52d5be!important;
 }
 #contacts1-d STRONG {
   color: #001730;
@@ -675,5 +685,213 @@ h6,
   font-family: 'Lato', sans-serif;
 }
 #footer1-e P {
+  color: #28ffd2;
+}
+
+
+
+
+
+
+
+#msg-box8-r .mbr-section-title,
+#msg-box8-r p {
+  color: #fff;
+}
+#msg-box8-r .mbr-section-title SPAN {
+  font-size: 32px;
+  text-align: left;
+}
+#content5-s .mbr-section-title,
+#content5-s p {
+  color: #fff;
+}
+#content5-s .mbr-section-title {
+  font-size: 32px;
+  color: #001730;
+}
+#content5-s .mbr-section-title SPAN {
+  font-family: 'Open Sans', sans-serif;
+  color: #31aeda;
+}
+#content5-s P {
+  color: #a7a7a7;
+}
+#msg-box8-v .mbr-section-title,
+#msg-box8-v p {
+  color: #fff;
+}
+#msg-box8-v .mbr-section-title {
+  font-size: 32px;
+}
+#msg-box8-v .lead P {
+  font-size: 19px;
+}
+#msg-box1-w H3 {
+  text-align: right;
   color: #00a885;
+}
+#msg-box1-w H2 {
+  text-align: right;
+  color: #ffffff;
+}
+#msg-box1-w SPAN {
+  font-size: 36px;
+  font-family: 'Roboto', sans-serif;
+  text-align: left;
+  color: #28ffd2;
+}
+#header3-15 .mbr-section-title,
+#header3-15 .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-15 H3 {
+  font-size: 36px;
+  color: #31aeda;
+}
+#features4-13 .card-subtitle {
+  color: #bcbcbc;
+}
+#features4-13 .iconbox {
+  background-color: #f2f2f2;
+  border-color: #f2f2f2;
+}
+#features4-13 DIV {
+  color: #50cdb7;
+}
+#features4-13 H4 {
+  font-family: 'Oxygen', sans-serif;
+}
+#features4-13 SPAN {
+  color: #28ffd2;
+}
+#msg-box8-16 .mbr-section-title,
+#msg-box8-16 p {
+  color: #fff;
+}
+#msg-box8-16 .mbr-section-title {
+  font-family: 'Raleway', sans-serif;
+}
+#pricing-table2-18 .mbr-plan-header,
+#pricing-table2-18 .mbr-plan-body {
+  background-color: #f4f4f4;
+}
+#pricing-table2-18 ul,
+#pricing-table2-18 .mbr-plan-title,
+#pricing-table2-18 .mbr-price-value,
+#pricing-table2-18 .mbr-price-figure,
+#pricing-table2-18 .mbr-price-term {
+  color: #28262b;
+}
+#pricing-table2-18 .mbr-plan {
+  border-color: #e8e8e8;
+}
+#pricing-table2-18 .mbr-plan .list-group-item {
+  border-color: #cfcfcf;
+}
+#pricing-table2-18 UL {
+  text-align: center;
+}
+#pricing-table2-18 .mbr-plan-price-desc {
+  color: #31aeda;
+}
+#pricing-table2-18 .mbr-plan-price-desc SPAN {
+  font-family: 'Raleway', sans-serif;
+  color: #2b0680;
+  font-size: 18px;
+}
+#pricing-table2-18 .mbr-price-term {
+  color: #31aeda;
+}
+#pricing-table2-18 .mbr-price-figure {
+  color: #31aeda;
+}
+#pricing-table2-18 .mbr-price-value {
+  color: #31aeda;
+}
+#pricing-table2-18 .mbr-plan-title {
+  color: #28324e;
+}
+#form1-z .form-control-label {
+  color: #52d5bd;
+}
+#form1-z .mbr-section-title {
+  font-size: 36px;
+  color: #28ffd2;
+}
+#social-buttons4-19 .mbr-section-title,
+#social-buttons4-19 .btn-social {
+  color: #fff;
+}
+#ext_menu-10 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-10 .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-10 .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-10 .close-icon::before,
+#ext_menu-10 .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-10 .link,
+#ext_menu-10 .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-10 .link {
+  font-size: 1.05rem;
+}
+#ext_menu-10 .dropdown-item,
+#ext_menu-10 .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-10 .link:hover,
+#ext_menu-10 .dropdown-item:hover,
+#ext_menu-10 .link:focus,
+#ext_menu-10 .dropdown-item:focus {
+  color: #52d5be;
+}
+#ext_menu-10 .link[aria-expanded="true"],
+#ext_menu-10 .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-10 .nav-dropdown-sm .link:focus,
+#ext_menu-10 .nav-dropdown-sm .link:hover,
+#ext_menu-10 .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-10 .nav-dropdown-sm .dropdown-item:hover {
+  background: #001021!important;
+}
+#ext_menu-10 .navbar,
+#ext_menu-10 .nav-dropdown-sm,
+#ext_menu-10 .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-10 .nav-dropdown-sm .dropdown-menu {
+  background: #001730;
+}
+#ext_menu-10 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-10 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-10 .bg-color.transparent.opened .link:hover,
+#ext_menu-10 .bg-color.transparent.opened .link:focus {
+  color: #52d5be;
+}
+#ext_menu-10 .link[aria-expanded="true"],
+#ext_menu-10 .dropdown-item[aria-expanded="true"] {
+  color: #52d5be!important;
+}
+#contacts1-11 STRONG {
+  color: #001730;
+  font-family: 'Montserrat', sans-serif;
+}
+#contacts1-11 P {
+  color: #ffffff;
+  font-family: 'Lato', sans-serif;
+}
+#footer1-12 P {
+  color: #28ffd2;
 }
