--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -529,6 +529,7 @@ h6,
 #contacts1-8 P {
   color: #ffffff;
   font-family: 'Lato', sans-serif;
+  text-align: left;
 }
 #footer1-a P {
   color: #28ffd2;
@@ -891,6 +892,7 @@ h6,
 #contacts1-11 P {
   color: #ffffff;
   font-family: 'Lato', sans-serif;
+  text-align: left;
 }
 #footer1-12 P {
   color: #28ffd2;
