--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -89,7 +89,7 @@ h6,
   background-color: #001730 !important;
 }
 .bg-info {
-  background-color: #66bdaf !important;
+  background-color: #03e3ff !important;
 }
 .bg-warning {
   background-color: #f3c649 !important;
@@ -138,8 +138,8 @@ h6,
   border-color: #94ada8 !important;
 }
 .btn-info {
-  background-color: #66bdaf;
-  border-color: #66bdaf;
+  background-color: #03e3ff;
+  border-color: #03e3ff;
   color: #ffffff;
 }
 .btn-info:hover,
@@ -148,14 +148,14 @@ h6,
 .btn-info:active,
 .btn-info.active {
   color: #ffffff;
-  background-color: #419688;
-  border-color: #419688;
+  background-color: #00a1b5;
+  border-color: #00a1b5;
 }
 .btn-info.disabled,
 .btn-info:disabled {
   color: #ffffff !important;
-  background-color: #419688 !important;
-  border-color: #419688 !important;
+  background-color: #00a1b5 !important;
+  border-color: #00a1b5 !important;
 }
 .btn-success {
   background-color: #001730;
@@ -259,8 +259,8 @@ h6,
 }
 .btn-info-outline {
   background: none;
-  border-color: #398478;
-  color: #398478;
+  border-color: #008b9c;
+  color: #008b9c;
 }
 .btn-info-outline:hover,
 .btn-info-outline:focus,
@@ -268,14 +268,14 @@ h6,
 .btn-info-outline:active,
 .btn-info-outline.active {
   color: #ffffff;
-  background-color: #66bdaf;
-  border-color: #66bdaf;
+  background-color: #03e3ff;
+  border-color: #03e3ff;
 }
 .btn-info-outline.disabled,
 .btn-info-outline:disabled {
   color: #ffffff !important;
-  background-color: #66bdaf !important;
-  border-color: #66bdaf !important;
+  background-color: #03e3ff !important;
+  border-color: #03e3ff !important;
 }
 .btn-success-outline {
   background: none;
@@ -344,7 +344,7 @@ h6,
   color: #001730 !important;
 }
 .text-info {
-  color: #66bdaf !important;
+  color: #03e3ff !important;
 }
 .text-warning {
   color: #f3c649 !important;
@@ -356,7 +356,7 @@ h6,
   background-color: #001730;
 }
 .alert-info {
-  background-color: #66bdaf;
+  background-color: #03e3ff;
 }
 .alert-warning {
   background-color: #f3c649;
@@ -402,7 +402,7 @@ h6,
 }
 .mbr-plan-header.bg-info .mbr-plan-subtitle,
 .mbr-plan-header.bg-info .mbr-plan-price-desc {
-  color: #bfe3de;
+  color: #cffaff;
 }
 .mbr-plan-header.bg-warning .mbr-plan-subtitle,
 .mbr-plan-header.bg-warning .mbr-plan-price-desc {
@@ -895,5 +895,131 @@ h6,
   text-align: left;
 }
 #footer1-12 P {
+  color: #28ffd2;
+}
+
+
+
+
+
+#content5-1e .mbr-section-title,
+#content5-1e p {
+  color: #fff;
+}
+#content5-1e .mbr-section-title {
+  text-align: center;
+  font-size: 32px;
+}
+#content5-1e P {
+  text-align: center;
+}
+#pricing-table2-1g .mbr-plan-header,
+#pricing-table2-1g .mbr-plan-body {
+  background-color: #f4f4f4;
+}
+#pricing-table2-1g ul,
+#pricing-table2-1g .mbr-plan-title,
+#pricing-table2-1g .mbr-price-value,
+#pricing-table2-1g .mbr-price-figure,
+#pricing-table2-1g .mbr-price-term {
+  color: #28262b;
+}
+#pricing-table2-1g .mbr-plan {
+  border-color: #e8e8e8;
+}
+#pricing-table2-1g .mbr-plan .list-group-item {
+  border-color: #cfcfcf;
+}
+#pricing-table2-1g .mbr-plan-subtitle {
+  font-family: 'Lato', sans-serif;
+  font-size: 20px;
+}
+#pricing-table2-1g .mbr-plan-title {
+  font-size: 20px;
+}
+#pricing-table2-1g .mbr-plan-price-desc {
+  font-family: 'Open Sans', sans-serif;
+}
+#pricing-table2-1g .mbr-price-figure {
+  font-family: 'Open Sans', sans-serif;
+}
+#form1-1i .form-control-label {
+  color: #ffffff;
+}
+#form1-1i .mbr-section-title {
+  font-size: 30px;
+  color: #ffffff;
+}
+#ext_menu-1b .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-1b .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-1b .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-1b .close-icon::before,
+#ext_menu-1b .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-1b .link,
+#ext_menu-1b .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-1b .link {
+  font-size: 1.05rem;
+}
+#ext_menu-1b .dropdown-item,
+#ext_menu-1b .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-1b .link:hover,
+#ext_menu-1b .dropdown-item:hover,
+#ext_menu-1b .link:focus,
+#ext_menu-1b .dropdown-item:focus {
+  color: #52d5be;
+}
+#ext_menu-1b .link[aria-expanded="true"],
+#ext_menu-1b .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-1b .nav-dropdown-sm .link:focus,
+#ext_menu-1b .nav-dropdown-sm .link:hover,
+#ext_menu-1b .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-1b .nav-dropdown-sm .dropdown-item:hover {
+  background: #001021!important;
+}
+#ext_menu-1b .navbar,
+#ext_menu-1b .nav-dropdown-sm,
+#ext_menu-1b .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-1b .nav-dropdown-sm .dropdown-menu {
+  background: #001730;
+}
+#ext_menu-1b .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-1b .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-1b .bg-color.transparent.opened .link:hover,
+#ext_menu-1b .bg-color.transparent.opened .link:focus {
+  color: #52d5be;
+}
+#ext_menu-1b .link[aria-expanded="true"],
+#ext_menu-1b .dropdown-item[aria-expanded="true"] {
+  color: #52d5be!important;
+}
+#contacts1-1c STRONG {
+  color: #001730;
+  font-family: 'Montserrat', sans-serif;
+}
+#contacts1-1c P {
+  color: #ffffff;
+  font-family: 'Lato', sans-serif;
+  text-align: left;
+}
+#footer1-1d P {
   color: #28ffd2;
 }
